--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
-{
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
-  }
+// {
+//     "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+//   }
   
+{
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+  ]
+}
